# eventy

./: .env  .license_report.md  Cargo.toml  LICENSE  README.md
data/: roles.json  roles_full.json  users.json
src/: channel_manager.rs  commands.rs  error.rs  guild_manager.rs  logging.rs  main.rs  messages.rs  models.rs  role_manager.rs  user_manager.rs
src/commands/: config.rs  general.rs  mod.rs  update_category.rs  update_roles.rs  verification.rs
src/config/: category_structure.rs  global_permissions.rs  global_roles.rs  global_structure.rs  mod.rs  season.rs  special_members.rs  staging.rs
src/events/: guild.rs  message.rs  mod.rs
src/guild/: manager.rs  mod.rs
src/managers/: channel_manager.rs  config_manager.rs  maintainers_manager.rs  mod.rs  permission_checker.rs  role_manager.rs  verification_manager.rs
src/permissions/: config.rs  manager.rs  mod.rs  types.rs
src/state/: channel_state.rs  mod.rs  user_database.rs
src/verification/: manager.rs  mod.rs  types.rs
src/web/: admin.rs  auth.rs  mod.rs  oauth.rs  server.rs
