# Cargo.toml
[package]
name = "eventy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
dotenv = "0.15"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "5.5"
futures = "0.3"
poise = "0.6.1"
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
once_cell = "1.18"
async-trait = "0.1.88"
base64 = "0.22.1"
clap = { version = "4.5.53", features = ["derive"] }
parking_lot = "0.12"
tokio-stream = { version = "0.1", features = ["sync"] }

# Web server for OAuth verification
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1"

[profile.dev]
opt-level = 0
debug = true
codegen-units = 256
incremental = true
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
rpath = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16

[profile.quick-release]
inherits = "release"
opt-level = 2
lto = false
codegen-units = 128
